<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newback"
    tools:context="com.apcs2.helperapp.main.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""

        android:background="#fff"
        android:drawableStart="@drawable/people_alt_24_green"
        android:drawablePadding="10dp"
        android:drawableTint="#000"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="250dp"

        android:layout_height="40dp"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#fff"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="10dp"
        android:drawableTint="#000"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="250dp"

        android:layout_height="40dp"
        android:layout_alignTop="@+id/editTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="#fff"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:drawableTint="#000"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextRePass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="#fff"
        android:drawableStart="@drawable/lock_open_24"
        android:drawablePadding="10dp"
        android:drawableTint="#000"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewRegErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextRePass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextRePass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"

                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/finish"
                android:textColor="#fff"
                android:textSize="20dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_hasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewDone"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/already_had_an_account_login_here"
        android:textColor="#fff"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/staticLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBarReg"
            android:indeterminateDrawable="@drawable/progressbar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"

            android:layout_height="wrap_content"
            android:visibility="visible"
            />
    </LinearLayout>
</RelativeLayout>